--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&family=Kalam:wght@300;400;700&family=Patrick+Hand&family=Permanent+Marker&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -8,8 +9,10 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-body {
+body , .main{
     background: #f2f2f2;
+    display: grid;
+    gap: 3rem;
 }
 
 nav {
@@ -26,6 +29,7 @@ nav .logo {
     display: flex;
     align-items: center;
     gap: 2rem;
+
     h1 {
         color: #fff;
         font-size: 2.5rem;
@@ -138,29 +142,6 @@ nav .logo.space {
     padding: 0 5px 0 0;
 }
 
-@media (max-width: 980px) {
-
-    nav .menu-icon,
-    nav .cancel-icon,
-    nav .search-icon {
-        margin: 0 20px;
-    }
-
-    nav form {
-        right: 30px;
-    }
-}
-
-@media (max-width: 350px) {
-
-    nav .menu-icon,
-    nav .cancel-icon,
-    nav .search-icon {
-        margin: 0 10px;
-        font-size: 16px;
-    }
-}
-
 .content {
     position: absolute;
     top: 50%;
@@ -193,18 +174,91 @@ nav .logo.space {
 .notes-form {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: center;
     justify-content: center;
     gap: 2rem;
 }
-
-.showNotes {
-    display: grid;
-    align-items: center;
-    grid-template-rows: repeat(auto, 3fr);
-    gap: 2rem;
-}
-
 .note {
     padding: 5rem 5rem;
+}
+
+.notes-form {
+    background-color: rgb(3, 123, 192);
+    padding: 2rem 5rem;
+    border-radius: 30px;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.4);
+}
+
+input[type="text"] {
+    border-radius: 15px;
+    padding: 10px 20px;
+    font-size: 1rem;
+    width: 22vw;
+    border: 0px;
+}
+
+textarea{
+    border-radius: 15px;
+    padding: 10px 20px;
+    font-size: 1rem;
+    width: 22vw;
+    border: 0;
+}
+
+.info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+    h2{
+        font-size: 1.5rem;
+        color: white;
+        font-family: "Poppins", sans-serif;
+        letter-spacing: 2px;
+    }
+}
+
+.sbtbtn{
+    background-color: white;
+    padding: 1rem 2rem;
+    border: 0;
+    border-radius: 20px;
+    font-size: 1.2rem;
+}
+
+.sbtbtn:hover{
+    transform: translateY(-4%);
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.4);
+    transition: 0.2s ease-in;
+}
+
+.showNotes {
+    display: flex;
+    align-items: start;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 3rem;
+}
+
+.note{
+    background-color: rgb(3, 123, 192);
+    padding: 2rem 3rem;
+    border-radius: 20px;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.4);
+    width: 25vw;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    color: white;
+    .noteTitle{
+        font-size: 1.8rem;
+        border-bottom: 1px solid white;
+    }
+    .noteDescription{
+        background-color: white;
+        color: black;
+        padding: 1.5rem 2rem;
+        border-radius: 17px;
+        font-size: 1.2rem;
+    }
 }
