--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Permanent+Marker&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&family=Kalam:wght@300;400;700&family=Patrick+Hand&family=Permanent+Marker&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -9,7 +10,8 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-body , .main{
+body,
+.main {
     background: #f2f2f2;
     display: grid;
     gap: 3rem;
@@ -176,15 +178,16 @@ nav .logo.space {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
+    gap: 1.5rem;
 }
+
 .note {
     padding: 5rem 5rem;
 }
 
 .notes-form {
     background-color: rgb(3, 123, 192);
-    padding: 2rem 5rem;
+    padding: 2rem 2rem;
     border-radius: 30px;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.4);
 }
@@ -197,7 +200,7 @@ input[type="text"] {
     border: 0px;
 }
 
-textarea{
+textarea {
     border-radius: 15px;
     padding: 10px 20px;
     font-size: 1rem;
@@ -205,60 +208,102 @@ textarea{
     border: 0;
 }
 
-.info{
+.info {
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 1rem;
-    h2{
-        font-size: 1.5rem;
+
+    h2 {
+        font-size: 1rem;
         color: white;
         font-family: "Poppins", sans-serif;
         letter-spacing: 2px;
     }
 }
 
-.sbtbtn{
+.sbtbtn {
     background-color: white;
     padding: 1rem 2rem;
     border: 0;
     border-radius: 20px;
-    font-size: 1.2rem;
+    font-size: 0.8rem;
 }
 
-.sbtbtn:hover{
+.sbtbtn:hover {
     transform: translateY(-4%);
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.4);
     transition: 0.2s ease-in;
 }
 
 .showNotes {
-    display: flex;
-    align-items: start;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    gap: 3rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-gap: 5rem;
 }
 
-.note{
-    background-color: rgb(3, 123, 192);
+.note {
+    /* background-color: rgb(3, 123, 192); */
+    background-color: wheat;
     padding: 2rem 3rem;
-    border-radius: 20px;
+    /* border-radius: 20px; */
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.4);
     width: 25vw;
     display: flex;
     flex-direction: column;
+    position: relative;
     gap: 1rem;
-    color: white;
-    .noteTitle{
-        font-size: 1.8rem;
-        border-bottom: 1px solid white;
+    color: black;
+
+    .noteTitle {
+        font-size: 1rem;
+        border-bottom: 1px solid black;
     }
-    .noteDescription{
+
+    .noteDescription {
         background-color: white;
-        color: black;
         padding: 1.5rem 2rem;
-        border-radius: 17px;
-        font-size: 1.2rem;
+        border-top-left-radius: 30px;
+        border-top-right-radius: 30px;
+        border-bottom-right-radius: 30px;
+        font-size: 0.8rem;
+        height: 100%;
+    }
+}
+
+hr{
+    width: 100%;
+}
+
+.noteBar{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    right: 10px;
+    position: absolute;
+    align-items: flex-start;
+    justify-content: start;
+    gap: 1rem;
+    height: 100%;
+}
+
+.icon{
+    font-size: 1.1rem;
+}
+
+.icon:hover, .fa-regular:hover{
+    transform: scale(1.1);
+    transition: 0.2s ease;
+    cursor: pointer;
+}
+
+.heading{
+    width: 100%;
+    h1{
+        padding: 0 5rem;
     }
 }
