--- a/main.css
+++ b/main.css
@@ -10,6 +10,10 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body,
 .main {
     background: #f2f2f2;
@@ -178,7 +182,7 @@ nav .logo.space {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 1.5rem;
+    gap: 1rem;
 }
 
 .note {
@@ -212,7 +216,7 @@ textarea {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 1rem;
+    gap: 0.3rem;
 
     h2 {
         font-size: 1rem;
